deployment/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alerta-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: alerta-ui
  template:
    metadata:
      name: alerta-ui
      labels:
        app: alerta-ui
    spec:
      serviceAccountName: alertasa
      imagePullSecrets:
      - name: privatecred
      containers:
      - name: alerta-ui-container
        image: cr.artbit.com.pl/mydocker/alerta-ui:latest
        imagePullPolicy: Always
        ports:
        - name: alerta-ui-port
          containerPort: 8087
        livenessProbe:
          httpGet:
            path: /
            port: 8087
          initialDelaySeconds: 10
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 2
        readinessProbe:
          httpGet:
            path: /
            port: 8087
          initialDelaySeconds: 5
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "1Gi"
            cpu: "500m"
        volumeMounts:
          - name: alerta-conf
            mountPath: /app/config.json
            subPath: config.json
      volumes:
        - name: alerta-conf
          configMap:
            name: alerta-ui-cm
