deployment/alerta-postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerta-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-12.2.3
    app.kubernetes.io/instance: alerta
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
      nodePort: null
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: alerta
    app.kubernetes.io/component: primary
