deployment/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: alerta-service
  labels:
    app: alerta-app
spec:
  type: NodePort
  ports:
   - port: 8080
  selector:
   app: alerta-app
