deployment/ingress-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alerta-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: alerta.artbit.com.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alerta-ui-service
            port:
              number: 8087
